INF265/c4/parser.output
Terminals unused in grammar

    ID


Grammar

    0 $accept: command $end

    1 command: expr

    2 expr: expr '+' term
    3     | expr '-' term
    4     | term

    5 term: term '*' factor
    6     | factor

    7 factor: NUMBER
    8       | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8
    ')' (41) 8
    '*' (42) 5
    '+' (43) 2
    '-' (45) 3
    error (256)
    NUMBER (258) 7
    ID (259)


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    command (11)
        on left: 1
        on right: 0
    expr (12)
        on left: 2 3 4
        on right: 1 2 3 8
    term (13)
        on left: 5 6
        on right: 2 3 4 5
    factor (14)
        on left: 7 8
        on right: 5 6


State 0

    0 $accept: . command $end

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    command  go to state 3
    expr     go to state 4
    term     go to state 5
    factor   go to state 6


State 1

    7 factor: NUMBER .

    $default  reduce using rule 7 (factor)


State 2

    8 factor: '(' . expr ')'

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    expr    go to state 7
    term    go to state 5
    factor  go to state 6


State 3

    0 $accept: command . $end

    $end  shift, and go to state 8


State 4

    1 command: expr .
    2 expr: expr . '+' term
    3     | expr . '-' term

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10

    $default  reduce using rule 1 (command)


State 5

    4 expr: term .
    5 term: term . '*' factor

    '*'  shift, and go to state 11

    $default  reduce using rule 4 (expr)


State 6

    6 term: factor .

    $default  reduce using rule 6 (term)


State 7

    2 expr: expr . '+' term
    3     | expr . '-' term
    8 factor: '(' expr . ')'

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    ')'  shift, and go to state 12


State 8

    0 $accept: command $end .

    $default  accept


State 9

    2 expr: expr '+' . term

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    term    go to state 13
    factor  go to state 6


State 10

    3 expr: expr '-' . term

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    term    go to state 14
    factor  go to state 6


State 11

    5 term: term '*' . factor

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    factor  go to state 15


State 12

    8 factor: '(' expr ')' .

    $default  reduce using rule 8 (factor)


State 13

    2 expr: expr '+' term .
    5 term: term . '*' factor

    '*'  shift, and go to state 11

    $default  reduce using rule 2 (expr)


State 14

    3 expr: expr '-' term .
    5 term: term . '*' factor

    '*'  shift, and go to state 11

    $default  reduce using rule 3 (expr)


State 15

    5 term: term '*' factor .

    $default  reduce using rule 5 (term)
